# rust-vms2-tile-server

./: .env.example  Cargo.toml  LICENSE  README.md  minimal.sqlite
.github/workflows/: rust.yml
src/: main.rs
src/controllers/api/: mod.rs  open_api_controller.rs  tile_controller.rs
src/controllers/ui/: demo_controller.rs  index_controller.rs  mod.rs  open_api_controller.rs
src/routes/: api_route.rs  mod.rs  ui_route.rs
static/css/: demo.css
static/js/: demo.js
templates/: base_ui.html.tera  demo.html.tera  index.html.tera  open_api.html.tera
templates/open_api/: stoplight.html.tera
