[package]
name = "vms2-tile-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = "5.4"
vms2-tile-db-reader = "0.1"
